--- a/chatbot/.env
+++ b/chatbot/.env
@@ -1,1 +1,8 @@
 #Add the API keys here. Ask Owner for the keys.
+
+# If using Gemini via Vertex AI on Google CLoud
+GOOGLE_CLOUD_PROJECT=
+GOOGLE_CLOUD_LOCATION=
+GOOGLE_CLOUD_STAGING_BUCKET=
+GOOGLE_GENAI_USE_VERTEXAI=TRUE
+GOOGLE_API_KEY=
